# BasinCoolMag

./: README.md  README.txt  meshing.cc
BasinCooling/: 3D_heat.cc  CMakeLists.txt  Makefile  ReadHeatSteps.ipynb  constants.h  heat_boundary_values.cc  heat_right_hand_side.cc  heat_transfer.cc  initial_temperature.cc  initial_temperature_3D.cc  mars_heat.cc  read_heat_steps.ipynb  rheology.cc
BasinCooling/support_code/: config_in3D.cc  timer.h
BasinMagCalc/: B_calcs.py  basiniter.py  basinremag.py  basinremag_wselfremag.py  dipole_sources.py  interps.py  late_remag_wnumba.py  mag_data_analysis.ipynb  mag_materials.py  new_dipole_calc.ipynb  volmag.py
Preprocessing/: CoolingNotebook.ipynb  MercuryCoolingNotebook.ipynb  T_anomalies.py  config_template.cfg  config_template_3D.cfg
Preprocessing/BaseMeshes/: 100_200km_rcm.inp  100_250km_rcm.inp  50_100km_rcm.inp  5_10km_rcm.inp
Preprocessing/Meshing/: meshing.cc
